; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/tsearch/extr_spell.c_addToResult.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/tsearch/extr_spell.c_addToResult.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_NORM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i8**, i8*)* @addToResult to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @addToResult(i8** %0, i8** %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  store i8** %0, i8*** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i8**, i8*** %6, align 8
  %9 = load i8**, i8*** %5, align 8
  %10 = ptrtoint i8** %8 to i64
  %11 = ptrtoint i8** %9 to i64
  %12 = sub i64 %10, %11
  %13 = sdiv exact i64 %12, 8
  %14 = load i32, i32* @MAX_NORM, align 4
  %15 = sub nsw i32 %14, 1
  %16 = sext i32 %15 to i64
  %17 = icmp sge i64 %13, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %37

19:                                               ; preds = %3
  %20 = load i8**, i8*** %5, align 8
  %21 = load i8**, i8*** %6, align 8
  %22 = icmp eq i8** %20, %21
  br i1 %22, label %30, label %23

23:                                               ; preds = %19
  %24 = load i8*, i8** %7, align 8
  %25 = load i8**, i8*** %6, align 8
  %26 = getelementptr inbounds i8*, i8** %25, i64 -1
  %27 = load i8*, i8** %26, align 8
  %28 = call i64 @strcmp(i8* %24, i8* %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %36

30:                                               ; preds = %23, %19
  %31 = load i8*, i8** %7, align 8
  %32 = call i8* @pstrdup(i8* %31)
  %33 = load i8**, i8*** %6, align 8
  store i8* %32, i8** %33, align 8
  %34 = load i8**, i8*** %6, align 8
  %35 = getelementptr inbounds i8*, i8** %34, i64 1
  store i8* null, i8** %35, align 8
  store i32 1, i32* %4, align 4
  br label %37

36:                                               ; preds = %23
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %36, %30, %18
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i8* @pstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
